# siros-csc-client

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  scorecard.yml
src/: client.rs  ffi.rs  lib.rs  types.rs
tests/: cleverbase_conformance.rs  cleverbase_e2e.rs  cleverbase_live.rs  integration.rs
