[package]
name = "csc-client"
version = "0.1.0"
edition = "2021"
description = "CSC API v2.2 client for Qualified Electronic Signatures (QES)"
license = "BSD-2-Clause"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]

[dependencies]
async-trait = "0.1"
base64ct = { version = "1", features = ["alloc"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uniffi = "0.28"

[features]
bindgen = ["uniffi/cli"]
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
csc-client = { path = ".", features = ["test-utils"] }
