[package]
name = "siros-csc-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "CSC API v2.2 client for Qualified Electronic Signatures (QES)"
license = "BSD-2-Clause"
repository = "https://github.com/sirosfoundation/siros-csc-client"

[lib]
name = "csc_client"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uniffi = { version = "0.28", optional = true }

[features]
default = []
ffi = ["uniffi"]
bindgen = ["ffi", "uniffi/cli"]
test-utils = []

[dev-dependencies]
base64 = "0.22"
dotenvy = "0.15"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
siros-csc-client = { path = ".", features = ["test-utils"] }
